test/libyul/yulSyntaxTests/builtin_identifier_1.yul
{
	let add := 6
}
// ----
// ParserError 5568: (7-10): Cannot use builtin function name "add" as identifier name.
